--- a/resources/css/pub.css
+++ b/resources/css/pub.css
@@ -325,9 +325,11 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
     width: 100%;
-    height: 100vh;
+    min-height:85vh;
+    /*height: 100vh;*/
     /*background: url("/public/img/hero-bg.png");*/
-    background: url("/public/img/minina/photo_4.jpg");
+    background-image: url("/public/img/minina/photo_4.jpg");
+    background-position: center;
     position: relative;
 }
 
@@ -338,11 +340,22 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     right: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content:center;
+    align-items: baseline;
     flex-direction: column;
     text-align: center;
     padding: 0 15px;
+}
+
+#hero .hero-info{
+    width: 40vw;
+    border-radius: 15px;
+    /*background-color: rgba(148, 148, 148, 0.4);*/
+    background: linear-gradient(
+        to bottom,
+        rgba(5, 5, 5, 0.7),
+        rgba(5, 5, 5, 0.5)
+    );
 }
 
 #hero .hero-logo {
@@ -398,6 +411,9 @@ h1, h2, h3, h4, h5, h6 {
     }
     #hero h2 {
         line-height: 22px;
+    }
+    #hero .hero-info{
+        width: unset;
     }
 }
 
@@ -1767,7 +1783,6 @@ section {
     position: relative;
     z-index: 2;
     text-align: center;
-    padding: 80px 0;
 }
 
 #footer .footer-top .footer-logo img {
