--- a/resources/css/pub.css
+++ b/resources/css/pub.css
@@ -353,8 +353,8 @@ h1, h2, h3, h4, h5, h6 {
     /*background-color: rgba(148, 148, 148, 0.4);*/
     background: linear-gradient(
         to bottom,
-        rgba(5, 5, 5, 0.7),
-        rgba(5, 5, 5, 0.5)
+        rgba(5, 5, 5, 0.5),
+        rgba(5, 5, 5, 0.3)
     );
 }
 
@@ -464,6 +464,7 @@ section {
 .about .content ul {
     list-style: none;
     padding: 0;
+    border-bottom:unset ;
 }
 
 .about .content ul li {
