--- a/resources/css/pub.css
+++ b/resources/css/pub.css
@@ -330,7 +330,9 @@ h1, h2, h3, h4, h5, h6 {
     /*background: url("/public/img/hero-bg.png");*/
     background-image: url("/public/img/minina/photo_4.jpg");
     background-position: center;
-    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    /*position: relative;*/
 }
 
 #hero .hero-container {
@@ -356,6 +358,18 @@ h1, h2, h3, h4, h5, h6 {
         rgba(5, 5, 5, 0.5),
         rgba(5, 5, 5, 0.3)
     );
+}
+
+#hero .hero-info .h2 {
+    font-size: 36px;
+    font-weight: 300;
+    letter-spacing: 5px;
+}
+
+#hero .hero-info .h4 {
+    font-size: 26px;
+    font-weight: 300;
+
 }
 
 #hero .hero-logo {
@@ -414,6 +428,7 @@ h1, h2, h3, h4, h5, h6 {
     }
     #hero .hero-info{
         width: unset;
+        margin-top: 50px;
     }
 }
 
